--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "name": "nsp-check-remote",
+  "description": "Like `nsp check`, but for remote packages on npm.",
   "version": "1.0.0",
   "author": "Peter deHaan <peter@deseloper.com> (https://about.me/peterdehaan)",
   "bin": {
     "nsp-check-remote": "bin/cli.js"
+  },
+  "bugs": {
+    "url": "https://github.com/pdehaan/nsp-check-remote/issues"
   },
   "dependencies": {
     "nsp": "^2.6.1",
     "package-json": "^2.4.0",
     "yargs": "^5.0.0"
   },
+  "devDependencies": {},
+  "homepage": "https://github.com/pdehaan/nsp-check-remote#readme",
   "keywords": [
     "nsp",
     "package.json"
   ],
   "license": "WTFPL",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pdehaan/nsp-check-remote.git"
+  },
   "scripts": {
+    "api": "node test",
+    "cli": "bin/cli.js -n weinre -f summary",
     "test": "node test"
   }
 }
