--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nsp-check-remote",
   "description": "Like `nsp check`, but for remote packages on npm.",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Peter deHaan <peter@deseloper.com> (https://about.me/peterdehaan)",
   "bin": {
     "nsp-check-remote": "bin/cli.js"
@@ -10,8 +10,10 @@
     "url": "https://github.com/pdehaan/nsp-check-remote/issues"
   },
   "dependencies": {
+    "fetch-nice-package": "^1.0.1",
     "nsp": "^2.6.1",
-    "package-json": "^2.4.0",
+    "sort-json": "^1.3.0",
+    "stripcolorcodes": "^0.1.0",
     "yargs": "^5.0.0"
   },
   "devDependencies": {},
